--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-jest": "^26.6.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "msw": "^0.29.0",
     "ts-jest": "^26.5.6",
     "typescript": "^4.3.2"
   }
